_css/style.css
/*  indice:

    01. Reused configuration;
    02. Commum configuration;
    03. Top nav menu;
    04. Header main banner;
    05. Section main content;
    06. row menu;
    07. coffee image;
    08. where find;
    
*/

/************* 01. Reused configurations ************
*/

.text-align-center {
    text-align: center;
}

.middle {
    margin: 0 auto;
}

.uppercase {
    text-transform: uppercase;
}

.red {
    background-color: red;
}


/************ 02. Commum configuration ************ 
*/

body,
html {
    height: 100%;
    font-family: 'Inconsolata', monospace;
    line-height: 1.5;
    font-size: 15px;
    margin: 0;

}

body {
    background-color: whitesmoke;
}

p {
    font-size: 18px;
    text-align: justify;
}

img {
    width: 100%;
}

/************ 03. Top nav menu ************ 
*/

.header nav {
    width: 100%;
    position: fixed;
    z-index: 1;
}

.menu-row {
    display: grid;
    grid-template-areas: 
    'm01 m02 m03 m04';
    padding: 8px 0;
    margin: 0;
    background-color: #000;
}

.menu-row a{
    text-decoration: none;
    color: #fff;
    padding: 8px 16px;
    cursor: pointer;
    font-size: 15px;
}

.menu-row a:hover {
    color: #000;
    background-color: #ccc;
    transition: 200ms;
}

.menu-btn {
    display: block;
}

.m01 {
    grid: m01;
}

.m02 {
    grid: m02;
}
.m02 {
    grid: m03;
}
.m02 {
    grid: m04;
}


/************ 03. Header Main ************ 
*/

.main {
    box-sizing: inherit;
    display: block;
    min-height: 75%;
    background-size: cover;
    background-image: url(../_img/coffeehouse.jpg);
    background-position: center;
    filter: grayscale(50%);
    position: relative;
}

.time {
    position: absolute;
    left: 0;
    bottom: 0;
    background-color: #000
}

.main-name {
    font-size: 98px;
    color: #fff;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
}

.main-name .name-br {
    display: block;
}

.adress {
    position: absolute;
    right: 0;
    bottom: 0;
}

.time,
.adress {
    padding: 0 8px;
    margin: 12px 24px;
    display: inline-block;
    color: #fff;
}

/************ 05. Section main content ************ 
*/

.main-content {
    width: 100%;
    max-width: 740px;
    padding: 0 20px 60px 0;
    background-color: #fdf5e6;
    filter: grayscale(75%);
}

div .title {
    display: inline-block;
    margin: 74px 0;
    background-color: #000;
    color: #fff;
    padding: 0 8px;
    text-align: center;
    letter-spacing: 4px;
    font-size: 22px;
}

.row p {
    margin-bottom: 20px;
}

.quote {
    padding: 20px;
    margin-bottom: 30px;
    background-color: #fda;
    opacity: 0.8;
    filter: grayscale(100%);
    border-left: 6px solid #909090;
    font-size: 18px;
}

.quote blockquote {
    padding: 0 0px;
}

/************ 06. row menu ************ 
*/

.tablink {
    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
    padding: 48px 16px 18px 16px;
}

.tablink h3{
    margin: 10px 0;
    font-weight: 400;
    font-size: 18px;
    font-family: "Segoe UI",Arial,sans-serif;
}

.tablink p {
    color: #757575;
    margin: 18px 0 45px 0;
}

.tab {
    padding: 8px 16px;
    box-shadow: 0 0 5px 0 rgba(0,0,0,0.16),0 0 10px 0 rgba(0,0,0,0.12);
    overflow: hidden;
}

.tab button {
    font-size: 18px;
    width: 50%;
    float: left;
    text-decoration: none;
    color: #111;
    font-weight: 400;
    border: none;
    background-color: whitesmoke;
    letter-spacing: 2px;
}

/************ 07. coffee image ************ 
*/

.coffee-img {
    margin-top: 32px;
}

/************ 08. where find ************ 
*/

.fyi {
    background-color: #000;
    color: #fff;
    padding: 5px 10px;
}

.where-img {
    margin-bottom: 20px;
}

/************ 09. contact form ************ 
*/

.c-form input,
.c-form button {
    display: block;
}

.c-form input {
    width: 100%;
    font-size: 16px;
    background-color: #fff;
    color: #555;
    border: 1px solid #aaa;
    padding: 16px 10px;
    margin-bottom: 20px;
    overflow: visible;
    letter-spacing: 1px;
}

.c-form button {
    color: #fff;
    background-color: #000;
    padding: 12px 16px; 
    font-size: 15px;
    cursor: pointer;
    overflow: hidden;
    white-space: nowrap;
    border: none;
}

.c-form button:hover {
    background-color: #ccc;
    color: #000;
    transition: 300ms;
}

/************ 10. footer ************ 
*/

footer {
    padding: 68px 0;
    background-color: #f1f1f1;
}

footer p a{
    color: #000;
}

footer p a:hover {
    color: rgb(42, 177, 42);
}

